--- a/select2.html
+++ b/select2.html
@@ -11,6 +11,7 @@
 <div class="container">
 	<div class="row">
 	    <form class="col-md-8">
+	        <label>Select 2</label>
 	        <label>Select</label>
 	        <select class="js-example-basic-single" name="state">
   <option value="AL">Alabama</option>
